--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-  <div>{{ message }}</div>
+  <!-- 加入超链接 -->
+  <div><a href="{{ url_for('login') }}">{{ message }}</a></div>
 </body>
 </html>
